// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderAgentFixPrompt > includes PR metadata, fixPrompt verbatim, P3 tagging, and severity-first order 1`] = `
"Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, and keep changes minimal.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

Findings:

[P0] @src/a.ts lines 5-7
In src/a.ts lines 5-7, guard the map with a mutex.

[P2] @src/b.ts lines 20-22
In src/b.ts lines 20-22, adjust slice end index.

[P3 — no inline thread] Typo in heading
minor typo"
`;

exports[`renderInlineThreadBody > P0 with fixPrompt accordion 1`] = `
"**P0** · **Race on shared map**

\`src/a.ts\` · lines 5-7

Concurrent writes without lock.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, and keep changes minimal.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

[P0] @src/a.ts lines 5-7
Guard the map with a mutex or use Ref.modify.
\`\`\`

</details>"
`;

exports[`renderInlineThreadBody > P1 with fixPrompt accordion 1`] = `
"**P1** · **Missing await**

\`src/b.ts\` · line 1

Promise not awaited in handler.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, and keep changes minimal.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

[P1] @src/b.ts line 1
Await the promise before returning.
\`\`\`

</details>"
`;

exports[`renderInlineThreadBody > P2 with fixPrompt accordion 1`] = `
"**P2** · **Off-by-one in slice**

\`src/c.ts\` · lines 20-22

End index excludes last element incorrectly.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, and keep changes minimal.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

[P2] @src/c.ts lines 20-22
Adjust slice end index to include the last item.
\`\`\`

</details>"
`;

exports[`renderReviewPointerBody > wraps agent fix prompt in accordion with pointer line 1`] = `
"> [!NOTE]
> Full review is in the PR conversation. Expand below to copy fixes for your coding agent.

<details>
<summary>Fix all findings (agent prompt)</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, and keep changes minimal.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

Findings:

[P1] @src/x.ts line 4
Fix src/x.ts line 4.
\`\`\`

</details>
<!-- pr-agent:review-pointer lens=review -->"
`;

exports[`renderReviewSummaryComment > drops finding rows from the tail when compact mode still exceeds the body budget 1`] = `
"## PR Agent Review

> [!NOTE]
> Adds a retry wrapper around the webhook dispatcher.

<table>
<tbody>
<tr><td><strong>Effort</strong></td><td>Moderate · <code>3/5</code></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f0.ts#L1">Bug 0</a></strong><br><em>Summary only · <code>src/f0.ts</code> · line 1</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f1.ts#L2">Bug 1</a></strong><br><em>Summary only · <code>src/f1.ts</code> · line 2</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f10.ts#L11">Bug 10</a></strong><br><em>Summary only · <code>src/f10.ts</code> · line 11</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f11.ts#L12">Bug 11</a></strong><br><em>Summary only · <code>src/f11.ts</code> · line 12</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f2.ts#L3">Bug 2</a></strong><br><em>Summary only · <code>src/f2.ts</code> · line 3</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>P2</strong></td><td><strong><a href="https://github.com/acme/widgets/blob/abc123def456/src/f3.ts#L4">Bug 3</a></strong><br><em>Summary only · <code>src/f3.ts</code> · line 4</em><br><em>Expand Prompt to fix below (summary-only).</em></td></tr>
<tr><td><strong>Relevant tests</strong></td><td>partial</td></tr>
<tr><td><strong>Security</strong></td><td>None found on this pass</td></tr>
</tbody>
</table>

> [!NOTE]
> Some finding details were shortened to fit GitHub comment size limits. See inline threads where posted.

> [!NOTE]
> 6 finding(s) omitted from this summary due to GitHub comment size limits — see inline threads where posted.

<!-- pr-agent:review-meta headSha=abc123def456 lens=review stale=false -->

<sub>abc123d ⋅ general ⋅ 11m 20s ⋅ grok-4.5</sub>"
`;
